crates/service/tests/code_action/snapshots/features__code_action__fix_invalid_mem_arg__around_whitespaces.snap
---
source: crates/service/tests/code_action/fix_invalid_mem_arg.rs
expression: response
---
[
  {
    "title": "Fix invalid memory argument",
    "kind": "quickfix",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 25
              },
              "end": {
                "line": 2,
                "character": 26
              }
            },
            "newText": ""
          },
          {
            "range": {
              "start": {
                "line": 2,
                "character": 27
              },
              "end": {
                "line": 2,
                "character": 28
              }
            },
            "newText": ""
          }
        ]
      }
    },
    "isPreferred": true
  }
]
