crates/service/tests/code_action/snapshots/features__code_action__fix_invalid_mem_arg__diagnostics.snap
---
source: crates/service/tests/code_action/fix_invalid_mem_arg.rs
expression: response
---
[
  {
    "title": "Fix invalid memory argument",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 0
          },
          "end": {
            "line": 0,
            "character": 0
          }
        },
        "code": "syntax/",
        "message": "syntax error: expected"
      }
    ],
    "isPreferred": true,
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 25
              },
              "end": {
                "line": 2,
                "character": 26
              }
            },
            "newText": ""
          }
        ]
      }
    }
  }
]
