crates/service/tests/code_action/snapshots/features__code_action__fix_invalid_mem_arg__trailing_whitespace.snap
---
source: crates/service/tests/code_action/fix_invalid_mem_arg.rs
expression: response
---
[
  {
    "title": "Fix invalid memory argument",
    "kind": "quickfix",
    "diagnostics": [],
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 26
              },
              "end": {
                "line": 2,
                "character": 27
              }
            },
            "newText": ""
          }
        ]
      }
    },
    "isPreferred": true
  }
]
